--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngrx/store": "^12.4.0",
     "bootstrap": "^4.5.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~6.6.0",
